# toss

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
assets/: 404.html
toss_cli/: __main__.py  cli.py  config.py  deploy.py  remote.py  ssh.py
toss_cli/templates/: __init__.py  markdown_page.html
