[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toss-cli"
version = "1.1.0"
description = "Minimal CLI to deploy and share static sites, HTML, and Markdown from your own server."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Valérien", email = "contact@brayevalerien.com" }]
requires-python = ">=3.10"
dependencies = []
keywords = [
    "cli", "static-site", "self-hosted", "deploy", "markdown",
    "latex", "caddy", "rsync", "file-sharing",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/brayevalerien/toss"
Repository = "https://github.com/brayevalerien/toss"

[project.scripts]
toss = "toss_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["toss_cli"]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
target-version = "py310"
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
